--- a/dayanakhoiriyahharahap/mvc-app/android/app/build.gradle
+++ b/dayanakhoiriyahharahap/mvc-app/android/app/build.gradle
@@ -47,6 +47,7 @@ flutter {
 dependencies {
   // Import the Firebase BoM
   implementation platform('com.google.firebase:firebase-bom:33.11.0')
+  implementation 'com.google.firebase:firebase-messaging'
 
 
   // TODO: Add the dependencies for Firebase products you want to use
