--- a/dayanakhoiriyahharahap/mvc-app/pubspec.yaml
+++ b/dayanakhoiriyahharahap/mvc-app/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +39,9 @@ dependencies:
   firebase_core: ^3.12.1
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.5.1
+  firebase_messaging: ^15.2.10
+  flutter_local_notifications: ^19.4.2 
+
 
 dependency_overrides:
   collection: 1.19.1
@@ -45,7 +49,6 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
